--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "queue": "nodemon src/queue.js",
-    "build": "sucrase ,/src -d ./dist --transforms imports",
+    "build": "sucrase ./src -d ./dist --transforms imports",
     "start": "node dist/server.js",
     "lint": "eslint --ext .js src/",
     "createdb": "sequelize db:create && sequelize db:migrate && sequelize db:seed:all"
